Move general markdown css script to markdown.css

--- a/views/bookmarks/highlights.mustache
+++ b/views/bookmarks/highlights.mustache
@@ -4,7 +4,7 @@
 <head>
     {{> head }}
     <link rel="stylesheet" href="/css/simplemde-theme-dark.min.css">
-
+    <link rel="stylesheet" href="/css/markdown.css">
 </head>
 
 <body class="vertical dark">
