--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -6,17 +6,7 @@
     <link rel="stylesheet" href="/css/simplemde-theme-dark.min.css">
     <link rel="stylesheet" href="/css/version-diff.css">
     <link rel="stylesheet" href="/css/highlightjs/default.min.css">
-    <style>
-        img {
-            position: relative;
-            left: 50%;
-            transform: translate(-50%, 0);
-            -ms-transform: translate(-50%, 0);
-            -webkit-transform: translate(-50%, 0);
-            max-width: 100%;
-            max-height: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/markdown.css">
 </head>
 
 <body class="vertical dark">
