--- a/views/home.mustache
+++ b/views/home.mustache
@@ -74,8 +74,7 @@
                                 {{{highlight}}}
 
                                 <footer class="blockquote-footer">
-                                    {{author}} <cite>{{source}}</cite> ~ {{created_at_formatted}}
-                                    /{{updated_at_formatted}}
+                                    {{author}} <cite>{{source}}</cite> ~ {{ultimate_timestamp}}
                                 </footer>
 
                             </div>
